# opencl_mandelbrot

./: CMakeLists.txt  demo  kernels.cl  main.cpp
